--- a/app.html
+++ b/app.html
@@ -1,2 +1,12 @@
-<h1>Hello World</h1>
-<h2>This has been changed</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Google Cast Chrome Sender SDK: Hello World</title>
+  <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
+</head>
+<body>
+  <h1>Hello World - Reciever App</h1>
+  <input/>
+</body>
+</html>
+
